GitVersion1/objects/Events_for_Approval__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved by Manager</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject_del__c</fullName>
        <defaultValue>&quot;Wniosek o akceptację podróży służb. w okresie &quot;</defaultValue>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <defaultValue>TODAY() +7</defaultValue>
        <label>To</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Events for Approval</label>
    <listViews>
        <fullName>My</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Subject_del__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Mine</filterScope>
        <label>My events for approval</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>E4A-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events for Approval</pluralLabel>
    <recordTypes>
        <fullName>Unapproved_Plan</fullName>
        <active>true</active>
        <label>Unapproved Plan</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>